--- a/0801/server/package.json
+++ b/0801/server/package.json
@@ -4,7 +4,6 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "start" : "node app.js",
     "test": "echo \"Test: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2"
